samples/_failures_safe/1761220416_0ea96b_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_a708949e.c: In function ‘print_simulation_state’:
./samples/SAFE/__tmp_a708949e.c:126:16: error: missing terminating " character
  126 |         printf("Object %d: Pos(%.3f, %.
      |                ^~~~~~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_a708949e.c:126:9: error: expected expression at end of input
  126 |         printf("Object %d: Pos(%.3f, %.
      |         ^~~~~~
./samples/SAFE/__tmp_a708949e.c:126:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_a708949e.c:126:9: error: expected declaration or statement at end of input
